RESOLVED FIXED142103
<attachment> should have an inactive style (gray in background)
https://bugs.webkit.org/show_bug.cgi?id=142103
Summary <attachment> should have an inactive style (gray in background)
Tim Horton
Reported 2015-02-27 14:27:45 PST
<attachment> should have an inactive style (gray in background)
Attachments
Patch (4.25 KB, patch)
2015-02-27 14:28 PST, Tim Horton
mitz: review+
Tim Horton
Comment 1 2015-02-27 14:28:02 PST
WebKit Commit Bot
Comment 2 2015-02-27 14:30:56 PST
Attachment 247551 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2015-02-27 14:32:22 PST
Comment on attachment 247551 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=247551&action=review > Source/WebCore/ChangeLog:4 > + Need the bug URL (OOPS!). OOPS!
Tim Horton
Comment 4 2015-02-27 15:00:36 PST
Note You need to log in before you can comment on or make changes to this bug.