<attachment> should have an inactive style (gray in background) https://bugs.webkit.org/show_bug.cgi?id=142103 <rdar://problem/19982486>

Reviewed by Dan Bernstein.

* rendering/RenderThemeMac.mm:
(WebCore::attachmentLabelInactiveBackgroundColor):
(WebCore::attachmentLabelInactiveTextColor):
(WebCore::RenderThemeMac::paintAttachmentLabelBackground):
(WebCore::RenderThemeMac::paintAttachmentLabel):
Use a gray background and gray text when the selection containing the
attachment isn't focused and active.


Canonical link: https://commits.webkit.org/160151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180784 268f45cc-cd09-0410-ab3c-d52691b4dbfc